# wx-ribbon

./: .gitignore  README.md  pyproject.toml
demos/: basic.py
wx_ribbon/: __init__.py  buttons.py  ribbon.py
wx_ribbon/icons/: __init__.py  base.py
wx_ribbon/themes/: __init__.py  base.py  dark.py  light.py
